welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: value >- is not a member of Int
	if (n>-21) {
             ^